<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greenPrimary"
    android:orientation="vertical"
    tools:context=".CreateAnAccountActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="112dp"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_logo" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:background="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_user"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/Name_user"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/Phone"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtSodienthoai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone"
            android:imeOptions="actionNext"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/pass"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtMatkhau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:imeOptions="actionNext"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/confirm_password"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtXacnhanpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:imeOptions="actionDone"
            android:hint="@string/Confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </LinearLayout>

    <Button
        android:background="@drawable/style_edt"
        android:id="@+id/btnSignup"
        android:textColor="@color/greenPrimary"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/btn_signup" />
</LinearLayout>