<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/icons8_phone_filled_500" />

        <EditText
            android:id="@+id/edtTenDangNhap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:hint="@string/phone_number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/icons8_lock_filled_500" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:hint="@string/password" />

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"/>

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_create_account"/>

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_login_facebook"
        android:gravity="center"/>
    <ImageView
        android:id="@+id/btnFacebook"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/icons8_facebook_480"
        android:layout_gravity="center"/>
</LinearLayout>