<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/greenPrimary">

    <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/scrollView"
        android:layout_above="@id/cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">
          <android.support.v7.widget.RecyclerView
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/recyclerviewcart">
          </android.support.v7.widget.RecyclerView>
      </RelativeLayout>

    </ScrollView>

    <android.support.v7.widget.CardView
        android:visibility="gone"
         android:id="@+id/cart"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp">

            <TextView
                android:id="@+id/tvAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/count" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_toRightOf="@id/tvAmount"
                android:text="@string/money"
                android:textColor="@color/red" />

            <Button
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/style_button_dangnhap"
                android:text="@string/except"
                android:textColor="@color/white" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>
